--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="./MyLibrary.js"></script>
     <meta charset="utf-8">
 
   </head>
